<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/collect"
        android:title="@string/collect"
        android:icon="@mipmap/icon_uxin"/>
    <item
        android:id="@+id/todo"
        android:title="@string/todo"
        android:icon="@mipmap/icon_todo"/>
    <item
        android:id="@+id/night"
        android:title="@string/night"
        android:icon="@mipmap/icon_moon"/>
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@mipmap/setting"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@mipmap/icon_about"/>
    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@mipmap/icon_logout"/>
</menu>