<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.activity.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_basic_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tool_setting"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/basic_setting"
                android:textColor="@color/c_84afe4" />

            <RelativeLayout
                android:id="@+id/rl_no_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@id/tv_basic_setting"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_no_image_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_image_model"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_no_image_model_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_no_image_model"
                    android:layout_marginTop="@dimen/dp_2"
                    android:text="@string/no_image_model_content" />

                <CheckBox
                    android:id="@+id/ch_no_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_no_image_model"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@id/rl_no_image"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_yes_no_essay_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_yes_select_essay_top"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_yes_no_essay_top_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_yes_no_essay_top"
                    android:layout_marginTop="@dimen/dp_2"
                    android:text="@string/no_yes_select_essay_top_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_yes_no_essay_top"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/auto_switch_day_and_night"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_switch_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/set_switch_time" />

            <TextView
                android:id="@+id/tv_author_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/author_setting"
                android:textColor="@color/c_84afe4" />

            <RelativeLayout
                android:id="@+id/rl_no_author"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@id/tv_basic_setting"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_day_and_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_color"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_day_and_night"
                    android:layout_marginTop="@dimen/dp_2"
                    android:text="@string/custom_title_color" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_no_aut"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:layout_below="@id/tv_basic_setting"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_navigation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_color"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_navigation"
                    android:layout_marginTop="@dimen/dp_2"
                    android:text="@string/navigation_color_follow_title" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10" />
            </RelativeLayout>

            <TextView
                android:id="@+id/clear_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/clear_cache"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="0.0KB" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/only_about"
                android:textColor="@color/c_84afe4" />
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/version"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_now_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/current_version" />
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/update_log"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="https://"/>
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/source_code"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cource_code_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="https://"/>
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/copyright_statement"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/Individuals_only"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>