<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.todo.activity.AddToDoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42"
        android:background="@color/c_e91d65">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@mipmap/icon_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:text="@string/todo_add"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/sp_18" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/todo_title"
            android:textColor="@color/c_49454a" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_todo_name"
            android:textColor="@android:color/black"
            android:textColorHint="#B5B3B5"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/c_b5b3b5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5">

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/details"
            android:textColor="@color/c_49454a" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/input_todo_des"
            android:minLines="8"
            android:textColor="@android:color/black"
            android:textColorHint="@color/c_b5b3b5"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/c_b5b3b5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_priority"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/priority"
            android:textColor="@color/c_49454a" />

        <RadioGroup
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common"
                android:textColor="@color/c_49454a"
                android:theme="@style/todo_cb" />

            <RadioButton
                android:id="@+id/important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                android:textColor="@color/c_49454a"
                android:theme="@style/todo_cb" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/c_b5b3b5" />

    <LinearLayout
        android:id="@+id/ll_calendar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/todo_data"
            android:layout_gravity="center"
            android:textColor="@color/c_49454a" />

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/time"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/c_49454a" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_right"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_210"
            android:layout_marginTop="@dimen/dp_1"
            android:src="@mipmap/icon_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/c_b5b3b5" />

    <Button
        android:id="@+id/save_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/c_06bbd6"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>