<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/c_e91d65"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rg"
            android:layout_below="@id/toolbar" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/rg"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/frame"
            android:background="@drawable/gra_white_de" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"

            >

            <RadioButton
                android:id="@+id/rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@mipmap/home_unselected"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@mipmap/icon_knowledge_hierarchy_not_selected"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/knowledge"

                />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@mipmap/wechat"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/the_public" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@mipmap/icon_navigation_not_selected"
                android:gravity="center"
                android:padding="4dp"

                android:text="@string/navigation" />

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@mipmap/icon_project_not_selected"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/project" />


        </RadioGroup>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/layout_menu" />
</android.support.v4.widget.DrawerLayout>