<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.todo.activity.ToDoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:background="@color/c_e91d65">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_2"
                android:src="@mipmap/icon_left" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:text="@string/one"
                android:textColor="@color/c_ffffff"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/iv_change"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_4"
                android:src="@mipmap/icon_change" />
        </android.support.v7.widget.Toolbar>


        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentBottom="true"
            android:background="@color/c_ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_todo"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/dp_3"
                android:drawableTop="@mipmap/icon_todo"
                android:gravity="center"
                android:text="@string/backlog"
                android:textSize="@dimen/sp_12" />

            <RadioButton
                android:id="@+id/rb_finish"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="@dimen/dp_3"
                android:drawableTop="@mipmap/icon_finish"
                android:gravity="center"
                android:text="@string/finish"
                android:textSize="@dimen/sp_12" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rg_tab"
            android:layout_below="@id/toolbar" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_float"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="52dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorAccent"
            android:clickable="true"
            android:src="@mipmap/icon_write"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:rippleColor="#0097a7" />
    </RelativeLayout>
</LinearLayout>